--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-tabs": "^1.1.8",
+    "class-variance-authority": "^0.7.1",
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
