--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-tabs": "^1.1.8",
     "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.503.0",
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
