--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
