--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "zustand-middleware-yjs": "^1.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
